Add email tag to copyright

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,6 +219,10 @@
 		text-align: left;
 	}
 
+	#email-tag {
+		text-transform: none;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: #313f47;
 		line-height: 1.5;
